--- a/configs/gps/gps.conf
+++ b/configs/gps/gps.conf
@@ -33,7 +33,7 @@ XTRA_CA_PATH=/system/etc/security/cacerts
 DEBUG_LEVEL = 5
 
 # Intermediate position report, 1=enable, 0=disable
-INTERMEDIATE_POS=0
+INTERMEDIATE_POS=1
 
 # Below bit mask configures how GPS functionalities
 # should be locked when user turns off GPS on Settings
@@ -71,7 +71,7 @@ CAPABILITIES=0x37
 
 # Accuracy threshold for intermediate positions
 # less accurate positions are ignored, 0 for passing all positions
-# ACCURACY_THRES=5000
+ACCURACY_THRES=70
 
 ################################
 ##### AGPS server settings #####
@@ -116,7 +116,7 @@ SGLTE_TARGET=0
 # 0x1: RRC CPlane
 # 0x2: RRLP UPlane
 # 0x4: LLP Uplane
-A_GLONASS_POS_PROTOCOL_SELECT = 0
+A_GLONASS_POS_PROTOCOL_SELECT = 0xF
 
 ##################################################
 # Select technology for LPPe Control Plane
