--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -1,4 +1,4 @@
-# Copyright (c) 2013-2017, The Linux Foundation. All rights reserved.
+# Copyright (c) 2013-2018, The Linux Foundation. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions are
@@ -40,37 +40,26 @@ on init
     write /dev/stune/system-background/schedtune.colocate 0
     write /dev/stune/foreground/schedtune.colocate 0
     write /dev/stune/top-app/schedtune.colocate 1
-    chown media media /dev/dbmdx-1
-    chmod 0770 /dev/dbmdx-1
 
 on fs
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
     mount_all /vendor/etc/fstab.qcom
     swapon_all /vendor/etc/fstab.qcom
-
-    # Keeping following partitions outside fstab file. As user may not have
-    # these partition flashed on the device. Failure to mount any partition in fstab file
-    # results in failure to launch late-start class.
-
-    mkdir /persist/data 0700 system system
-    mkdir /persist/bms 0700 root system
-    restorecon_recursive /persist
-    mkdir /persist/wlan_bt 0777 root system
-    #add by Quanyu.Lee for MI-feature
-    #only needed on Factory version,DO NOT push to MIUI!
-    chmod 0644 /persist/wlan_bt/bt.mac
-    chmod 0644 /persist/wlan_bt/wlan.mac
-    chown system system /persist/wlan_bt/bt.mac
-    chown system system /persist/wlan_bt/wlan.mac
-
+    chown root system /mnt/vendor/persist
+    chmod 0771 /mnt/vendor/persist
+    mkdir /mnt/vendor/persist/data 0700 system system
+    mkdir /mnt/vendor/persist/bms 0700 root system
+    restorecon_recursive /mnt/vendor/persist
     write /sys/kernel/boot_adsp/boot 1
+    chown system system /dev/goodix_fp
+    #chmod 0644 /dev/goodix_fp
 
     chmod 0664 /sys/class/thermal/thermal_message/sconfig
     chown system system /sys/class/thermal/thermal_message/sconfig
 
 on post-fs
-    start qseecomd
+    start vendor.qseecomd
     exec - system system -- /vendor/bin/init.qti.qseecomd.sh
     write /dev/ipa 1
 
@@ -82,12 +71,11 @@ on post-fs-data
     mkdir /data/tombstones/lpass 0771 system system
     mkdir /data/tombstones/wcnss 0771 system system
     mkdir /data/tombstones/dsps 0771 system system
-    mkdir /data/vendor/hbtp 0750 system system
-    mkdir /persist/qti_fp 0700 system system
+#D2SP has no hbtp feature
+#    mkdir /data/vendor/hbtp 0750 system system
+#end
     mkdir /data/misc/seemp 0700 system system
-    mkdir /data/misc/tloc 0700 system drmrpc
-    mkdir /data/thermal 0771 system system
-    mkdir /data/thermal/config 0771 system system
+    mkdir /data/vendor/tloc 0700 system drmrpc
     start pa-cal-load
 
 on boot
@@ -115,32 +103,53 @@ on boot
     chown system system /persist/speccfg/vendor_persist.prop
     chown system system /persist/speccfg/submask
     chown system system /persist/speccfg/partition
-#Load WLAN driver
-   insmod -f /vendor/lib/modules/qca_cld3/qca_cld3_wlan.ko
-   chown wifi wifi /sys/module/wlan/parameters/fwpath
-   setprop wlan.driver.status "ok"
+    chown system system /mnt/vendor/persist/sensors/sns.reg
+#spk pa-cal lct-20180914   
+    chmod 0664 /dev/tiload_node
 
-    chmod 0660 /proc/nvt_wake_gesture
-    chown system system /proc/nvt_wake_gesture
+#Create folder dump yuv images while debugging
+    mkdir /data/vendor/camera 0770 camera camera
+
+#Load WLAN driver
+   insmod /vendor/lib/modules/qca_cld3/qca_cld3_wlan.ko
+
+#USB controller configuration
+    setprop vendor.usb.rndis.func.name "rndis_bam"
+    setprop vendor.usb.rmnet.func.name "rmnet_bam"
+    setprop vendor.usb.rmnet.inst.name "rmnet"
+    setprop vendor.usb.dpl.inst.name "dpl"
+    write /sys/module/usb_f_qcrndis/parameters/rndis_dl_max_xfer_size 15916
+    setprop sys.usb.configfs 1
 
 #Peripheral manager
-service per_mgr /system/vendor/bin/pm-service
+service vendor.per_mgr /system/vendor/bin/pm-service
     class core
     user system
     group system
     ioprio rt 4
 
-service per_proxy /system/vendor/bin/pm-proxy
+service vendor.per_proxy /system/vendor/bin/pm-proxy
     class core
     user system
     group system
     disabled
 
-on property:init.svc.per_mgr=running
-    start per_proxy
+on property:init.svc.vendor.per_mgr=running
+    start vendor.per_proxy
 
 on property:sys.shutdown.requested=*
-    stop per_proxy
+    stop vendor.per_proxy
+on property:sys.thermal.isincall=1
+    write /sys/class/power_supply/battery/device/thermalcall 1
+
+on property:sys.thermal.isincall=0
+    write /sys/class/power_supply/battery/device/thermalcall 0
+
+on property:sys.thermal.isinvideo=1
+    write /sys/class/thermal/thermal_message/sconfig 12
+
+on property:sys.thermal.isinvideo=0
+    write /sys/class/thermal/thermal_message/sconfig 0
 
 #start camera server as daemon
 #service qcamerasvr /system/bin/mm-qcamera-daemon
@@ -174,7 +183,7 @@ on property:sys.shutdown.requested=*
 #on property:sys.boot_completed=1
 #    start qrngp
 #
-service qseecomd /vendor/bin/qseecomd
+service vendor.qseecomd /vendor/bin/qseecomd
    class core
    user root
    group root
@@ -210,21 +219,35 @@ service time_daemon /system/vendor/bin/time_daemon
    user root
    group root
 
-service adsprpcd /system/vendor/bin/adsprpcd audiopd
+service adsprpcd_root /vendor/bin/adsprpcd
    class main
    user media
    group media
 
-service hbtp /system/vendor/bin/hbtp_daemon
-    class main
-    user system
-    group system
-    disabled
+service adsprpcd /vendor/bin/adsprpcd audiopd
+   class main
+   user media
+   group media
+
+#D2SP has no hbtp feature
+#service hbtp /system/vendor/bin/hbtp_daemon
+#    class main
+#    user system
+#    group system
+#    disabled
+#end
 
 service audiod /system/vendor/bin/audiod
    class late_start
    user system
    group system
+
+service vendor.cdsprpcd /vendor/bin/cdsprpcd
+   class main
+   user system
+   group system
+   disabled
+
 #
 #service usf_tester /system/vendor/bin/usf_tester
 #    user system
@@ -287,13 +310,16 @@ service audiod /system/vendor/bin/audiod
 #    chown system drmrpc /sys/devices/f9966000.i2c/i2c-1/1-0020/secure_touch
 #
 #
-service imsqmidaemon /system/vendor/bin/imsqmidaemon
+#
+## imsdatadaemon starts with root and UID will be downgraded to SYSTEM.
+service vendor.imsqmidaemon /system/vendor/bin/imsqmidaemon
     class main
     user system
     socket ims_qmid stream 0660 system radio
     group radio log diag
 
-service imsdatadaemon /system/vendor/bin/imsdatadaemon
+# imsdatadaemon starts with root and UID will be downgraded to SYSTEM.
+service vendor.imsdatadaemon /system/vendor/bin/imsdatadaemon
     class main
     user system
     socket ims_datad stream 0660 system radio
@@ -352,7 +378,7 @@ service mdtpd /system/vendor/bin/mdtpd
     user root
     group system radio drmrpc
 
-service pd_mapper /system/vendor/bin/pd-mapper
+service vendor.pd_mapper /system/vendor/bin/pd-mapper
      class core
 
 #
@@ -369,26 +395,43 @@ service pd_mapper /system/vendor/bin/pd-mapper
 #   disabled
 
 on property:vendor.ims.QMI_DAEMON_STATUS=1
-    start imsdatadaemon
+    start vendor.imsdatadaemon
 
-service ims_rtp_daemon /system/vendor/bin/ims_rtp_daemon
+on property:vold.decrypt=trigger_restart_framework
+   start cnss_diag
+
+service cnss_diag /system/vendor/bin/cnss_diag -q -f -t HELIUM
+   class main
+   user system
+   group system wifi inet sdcard_rw media_rw diag
+   oneshot
+
+#Modify a way to collecting wlan logs and default closed the logs in user builds
+service cnss_diag_system  /system/bin/cnss_diag_system -q -f -t HELIUM
+   class main
+   user system
+   group system wifi inet sdcard_rw media_rw diag
+   oneshot
+   disabled
+
+on property:sys.cnss_diag_system.log=1
+    start cnss_diag_system
+on property:persist.cnss_diag_system.log=1
+    start cnss_diag_system
+
+service vendor.ims_rtp_daemon /system/vendor/bin/ims_rtp_daemon
    class main
    user system
    group radio diag inet log
-   disabled
 
 service vendor.imsrcsservice /system/vendor/bin/imsrcsd
    class main
    user system
-   group radio diag inet log
-   disabled
+   group radio diag inet log wakelock
 
-# add for HMI_L8866_A01-502: begin
 on property:vendor.ims.DATA_DAEMON_STATUS=1
-    start ims_rtp_daemon
-    start vendor.imsrcsservice
-    setprop persist.rcs.supported 0
-# add for HMI_L8866_A01-502: end
+    restart vendor.ims_rtp_daemon
+
 
 service ppd /system/vendor/bin/mm-pp-dpps
     class late_start
@@ -418,7 +461,7 @@ on property:init.svc.zygote=restarting
 on charger
     load_system_props
     start qcom-post-boot
-    start hvdcp_opti
+    start vendor.hvdcp_opti
     setprop sys.usb.configfs 1
     start power_off_alarm
 
@@ -447,17 +490,12 @@ service seempd /system/bin/seempd
     group system sdcard_rw
     socket seempdw dgram 0666 system system
 
-service qfp-daemon /vendor/bin/qfp-daemon
+service vendor.tlocd /vendor/bin/tloc_daemon
     class late_start
     user system
-    group system drmrpc diag input
+    group drmrpc gps net_raw
 
-service tlocd /system/bin/tloc_daemon
-    class late_start
-    user system
-    group drmrpc
-
-service hvdcp_opti /system/vendor/bin/hvdcp_opti
+service vendor.hvdcp_opti /system/vendor/bin/hvdcp_opti
      class main
      user root
      group system wakelock
@@ -467,38 +505,29 @@ service smcinvoked /system/bin/smcinvoked
    user system
    group system
 
-# smart pa cal     wangshiyou 11/09
-service smart-pa-tfa-cal /system/vendor/bin/smart-pa-tfa-cal
-    user root
-    group root
-    disabled
-    oneshot
+#service for su
+service su_daemon /system/xbin/su --daemon
+    class main
 
 # smart pa cal     tsx 08/26
 service pa-cal-load /system/vendor/bin/smart-pa-cal -load
     user root
-    group root
+    group root audio
     disabled
     oneshot
 
 # smart pa cal     tsx 08/26
-service smart-pa-cal /system/vendor/bin/smart-pa-cal -t 25 -c /system/vendor/etc/speaker.ftcfg -v -u
+service smart-pa-cal /system/vendor/bin/smart-pa-cal -t 30 -c /system/vendor/etc/speaker.ftcfg -v -u
     user root
-    group root
+    group root audio
     disabled
     oneshot
 
-on property:sys.pa-cal=0
+on property:odm.pa-cal=0
     stop smart-pa-cal
 
-on property:sys.pa-cal=1
+on property:odm.pa-cal=1
     start smart-pa-cal
-
-on property:sys.pa-tfa-cal=0
-    stop smart-pa-tfa-cal
-
-on property:sys.pa-tfa-cal=1
-    start smart-pa-tfa-cal
 
 # audio loopback test begin    tsx 08/26
 service loopback_spk1 /system/vendor/bin/loopback.sh 1 1
@@ -560,6 +589,30 @@ service spk_playback0 /system/vendor/bin/loopback.sh 5 0
     group root
     disabled
     oneshot
+#mic1 to rec
+service loopback_mic12rec1 /system/vendor/bin/loopback.sh 11 1
+    user root
+    group root
+    disabled
+    oneshot
+
+service loopback_mic12rec0 /system/vendor/bin/loopback.sh 11 0
+    user root
+    group root
+    disabled
+    oneshot
+#mic2 to spk
+service loopback_mic22spk1 /system/vendor/bin/loopback.sh 12 1
+    user root
+    group root
+    disabled
+    oneshot
+
+service loopback_mic22spk0 /system/vendor/bin/loopback.sh 12 0
+    user root
+    group root
+    disabled
+    oneshot
 
 on property:sys.loopback-spk=1
     start loopback_spk1
@@ -591,13 +644,26 @@ on property:sys.spk-playback=1
 on property:sys.spk-playback=0
     start spk_playback0
 
-service tinyhostless_spk /system/vendor/bin/tinyhostless -D 0 -P 35 -C 11 -p 8 -n 2 -c 1 -r 48000
+#mic1 to rec
+on property:sys.loopback-mic12rec=1
+    start loopback_mic12rec1
+
+on property:sys.loopback-mic12rec=0
+    start loopback_mic12rec0
+#mic2 to spk
+on property:sys.loopback-mic22spk=1
+    start loopback_mic22spk1
+
+on property:sys.loopback-mic22spk=0
+    start loopback_mic22spk0
+
+service tinyhostless_spk /system/bin/tinyhostless -D 0 -P 35 -C 11 -p 8 -n 2 -c 1 -r 48000
     user root
     group root
     disabled
     oneshot
 
-service tinyhostless /system/vendor/bin/tinyhostless -D 0 -P 5 -C 11 -p 8 -n 2 -c 1 -r 48000
+service tinyhostless /system/bin/tinyhostless -D 0 -P 5 -C 11 -p 8 -n 2 -c 1 -r 48000
     user root
     group root
     disabled
@@ -617,10 +683,22 @@ on property:sys.tinyhostless-spk=1
 	
 #audio loopback test end
 on property:persist.sys.display_srgb=1
-	write /sys/class/graphics/fb0/msm_fb_srgb 1
+    write /sys/class/graphics/fb0/msm_fb_srgb 1
 
 on property:persist.sys.display_srgb=2
-	write /sys/class/graphics/fb0/msm_fb_srgb 2
+    write /sys/class/graphics/fb0/msm_fb_srgb 2
+
+service adswitch /vendor/bin/adswitch
+    user root
+    group root
+    disabled
+    oneshot
+
+on property:sys.ad.enable=on
+    start adswitch
+
+on property:sys.ad.enable=off
+    start adswitch
 
 on property:sys.dynamic_debug=1
    write /sys/kernel/debug/dynamic_debug/control "file q6afe.c +p" 
@@ -647,27 +725,3 @@ on property:sys.dynamic_debug=0
    write /sys/kernel/debug/dynamic_debug/control "file msm-analog-cdc.c -p" 
    write /sys/kernel/debug/dynamic_debug/control "file msm-digital-cdc.c -p"
    write /sys/kernel/debug/dynamic_debug/control "file wcd-mbhc-v2.c -p"
-
-on property:persist.sys.display_ce=4
-    write /sys/class/graphics/fb0/msm_fb_ce 1
-
-on property:persist.sys.display_ce=0
-    write /sys/class/graphics/fb0/msm_fb_ce 2
-
-on property:persist.sys.display_cabc=1
-    write /sys/class/graphics/fb0/msm_fb_cabc 1
-
-on property:persist.sys.display_cabc=2
-    write /sys/class/graphics/fb0/msm_fb_cabc 2
-
-on property:persist.sys.display_gamma=1
-    write /sys/class/graphics/fb0/msm_fb_gamma 1
-
-on property:persist.sys.display_gamma=2
-    write /sys/class/graphics/fb0/msm_fb_gamma 2
-
-on property:sys.antgpio=0
-    write /sys/class/ant_class/ant_state 0
-
-on property:sys.antgpio=1
-    write /sys/class/ant_class/ant_state 1
